# metrocali-data-quality-worker-catalog

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __main__.py
app/application/services/: build_catalog.py
app/application/use_cases/: create_catalog.py  inspect_schema.py  ping_connection.py
app/domain/entities/: catalog_aggregate.py  catalog_column_entity.py  catalog_table_entity.py  connection_entity.py  user_entity.py
app/domain/exceptions/: __init__.py  catalog_exception.py
app/domain/repos/: broker_consumer_repository.py  catalog_column_repository.py  catalog_repository.py  catalog_table_repository.py  connection_repository.py  ping_repository.py  schema_inspector.py  user_repository.py
app/domain/value_objects/: __init__.py  schema_inspection.py
app/infrastructure/: composition_root.py
app/infrastructure/adapters/: fake_catalog_repository.py  fake_connection_repository.py  fake_user_repository.py  sqlalchemy_catalog_column_repository.py  sqlalchemy_catalog_repository.py  sqlalchemy_catalog_table_repository.py  sqlalchemy_connection_repository.py  sqlalchemy_ping_repository.py  sqlalchemy_schema_inspector.py  sqlalchemy_user_repository.py
app/infrastructure/adapters/mappers/: catalog_column_mapper.py  user_mapper.py  (+3 more)
app/infrastructure/brokers/: valkey_consumer.py
app/infrastructure/config/: settings.py
app/infrastructure/database/: schema_readers.py  session.py  target_connection_pinger.py
app/infrastructure/entrypoints/: cli.py  polling_worker.py
app/infrastructure/security/: password_decryptor.py
(+8 files in other folders)
